# mlff

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  _setup.py  pyproject.toml  setup.py
.github/workflows/: CI.yml
_test_train_so3krates/module/: hyperparameters.json  scales.json
_test_train_so3krates/module_1/: checkpoint_F_100  hyperparameters.json  splits.json
examples/: mdx_md.py  repulsion.py  train_so3kratACE.py  train_so3krates.py
examples/ckpt_dir/module/: checkpoint_E_34440  checkpoint_loss_960  hyperparameters.json  scales.json
examples/ckpt_dir/module_1/: checkpoint_E_2440  checkpoint_F_0  hyperparameters.json
examples/ckpt_dir/module_2/: checkpoint_E_1440  checkpoint_loss_1520  hyperparameters.json
examples/ckpt_dir/module_4/: splits.json
examples/ckpt_dir/module_6/: checkpoint_E_1960  checkpoint_F_2400  hyperparameters.json
examples/ckpt_dir/module_7/: checkpoint_E_2200  (+2 more)
examples/wandb/: latest-run
mlff/: __init__.py
mlff/CLI/: run_evaluation.py  run_evaluation_itp_net.py  run_evaluation_itp_net_on.py  run_evaluation_on.py  run_fine_tuning.py  run_training.py  run_training_itp_net.py
mlff/basis_function/: radial.py
mlff/cAPI/: mlff_analyse.py  mlff_eval.py  mlff_input_processing.py  mlff_md.py  mlff_postprocessing.py  mlff_structure_relaxation.py  mlff_train.py  mlff_train_so3kratace.py  mlff_train_so3krates.py  process_argparse.py  process_yaml.py  train.yaml
mlff/config/: __init__.py  config.json  config.yaml  config_itp_net.yaml  from_config.py
mlff/cutoff_function/: __init__.py  pbc.py  radial.py
mlff/data/: __init__.py  data.py  data_loader_qcml.py  dataloader.py  dataloader_new.py  dataloader_sparse_ase.py  dataloader_sparse_npz.py  dataloader_sparse_spice.py  dataloader_sparse_tfds.py  dataloader_sparse_tfrecord.py  dataset.py  preprocessing.py  transformations.py
mlff/examples/: 00_Data_Preparation.ipynb  01_Learning_Force_Fields.ipynb  02_Multiple_Structure_Training.ipynb  05_Run_Molcular_Dynamics.ipynb  inference.py  my_splits.json  train_so3krates.py
mlff/geometric/: __init__.py  metric.py
mlff/indexing/: __init__.py  indices.py
mlff/inference/: __init__.py  evaluation.py
mlff/io/: __init__.py  checkpoint.py  io.py
mlff/masking/: mask.py
mlff/md/: __init__.py  calculator.py  calculator_sparse.py  integrator.py  simulate.py
mlff/mdx/: __init__.py  atoms.py  calculator.py  distributions.py  hdfdict.py  integrator.py  optimizer.py  simulate.py  utils.py
mlff/nn/: __init__.py
mlff/padding/: __init__.py  padding.py
mlff/properties/: __init__.py  properties.py  property_names.py
mlff/random/: __init__.py  random.py
mlff/sph_ops/: __init__.py  base.py  contract.py
mlff/src/: __init__.py
mlff/training/: __init__.py  coach.py  loss.py  metric.py  optimizer.py  run.py  run_sparse.py  train_state.py
mlff/utils/: __init__.py  cutoff_fn.py  evaluation_utils.py  jraph_utils.py  radial_basis_fn.py  structures.py  training_utils.py
tests/: test_config.py  test_data_loader_ase.py  test_data_loader_npz.py  test_embed_sparse.py  test_equivariance.py  test_fit.py  test_geometry_embed_sparse.py  test_itp_layer.py  test_jraph_utils.py  test_loss.py  test_mdx_utils.py  test_mdx_velocity_verlet.py  test_model_invariance.py  test_neighbor_list.py  test_observable_fn.py  test_pbc_neighbor_list.py  test_run_training.py  test_schnet.py  test_so3krates.py  test_so3krates_layer_sparse.py  test_stacknet_sparse.py  test_training_utils.py
tests/test_data/: __init__.py  data_set.xyz  data_set_pbc.npz  data_set_pbc.xyz  ethanol.npz  ethanol_dep.npz  load.py  multi_sized_solids.npz  multi_sized_solids.traj  test_solid.npz
(+189 files in other folders)
